fixed some alignment issues

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -199,7 +199,6 @@ pre {
 
 .bio {
   padding-top: 50px;
-  padding-left: 20px
 }
 
 .social-link-wrapper {
